--- a/application/contest/view/contest-problem.html
+++ b/application/contest/view/contest-problem.html
@@ -28,7 +28,7 @@
 				</li>
 				{/volist}
 			</ul>
-			<h2 align="center">
+			<h2 style="text-align: center">
 				{if $contest_problem->ac}
 				<span class="glyphicon glyphicon-ok" style="color: green"></span>
 				{elseif $contest_problem->ac2}
@@ -37,7 +37,7 @@
 				<span class="glyphicon glyphicon-hand-right" style="color: red"></span>
 				{/if}
 				{$alphabet[$contest_problem->num]}: {$problem->title}</h2>
-			<div align="center">
+			<div style="text-align: center">
 				<div class="panel panel-default">
 					<div class="panel-body">
 						<span class=green>{$lang.time_limit}: </span>{$problem->time_limit} s &nbsp;&nbsp;&nbsp;&nbsp;
@@ -46,7 +46,7 @@
 				</div>
 
 				<!--功能按钮组 begin-->
-				<button type="button" class="btn btn-success" onclick="show_submit_code_modal()">{$lang.submit}</button>
+				<button type="button" class="btn btn-success" onclick="gotoSubmitFormGroup();">{$lang.submit}</button>
 				{if $login_user}
 				<a href="/contests/{$contest->contest_id}/status?username={$login_user->user_id}&problem_id={$contest_problem->num}" target="_blank" type="button" class="btn btn-default">{$lang.my_status}</a>
 				{/if}
@@ -57,7 +57,7 @@
 				{/if}
 
 				{if $is_root}
-				<button class="btn btn-danger" onclick="rejudge_problem({$contest_problem->contest_id},{$contest_problem->num});">{$lang.rejudge}</button>
+				<button class="btn btn-danger" onclick="rejudge_problem('{$contest_problem->contest_id}', '{$contest_problem->num}');">{$lang.rejudge}</button>
 				{/if}
 				<!--功能按钮组 end-->
 			</div>
@@ -85,17 +85,73 @@
 			</div>
 			{/if}
 			<br>
-			<div align="center">
+			<div style="text-align: center">
 				<!--功能按钮组 begin-->
-				<button type="button" class="btn btn-success" onclick="show_submit_code_modal()">{$lang.submit}</button>
+				<button type="button" class="btn btn-success" onclick="gotoSubmitFormGroup();">{$lang.submit}</button>
 				{if $login_user}
 				<a href="/contests/{$contest->contest_id}/status?username={$login_user->user_id}&problem_id={$contest_problem->num}" target="_blank" type="button" class="btn btn-default">{$lang.my_status}</a>
 				{/if}
 				<!--功能按钮组 end-->
 			</div>
-		</div>
-		<div class="col-md-3">
 
+			<!--	提交代码表单组 begin-->
+			<div class="form-group" id="submit-group">
+				<div class="row">
+					<label class="col-md-1 col-form-label"></label>
+					<div class="col-md-11">
+						<h3>{$lang.submit_code}</h3>
+					</div>
+				</div>
+				<br>
+				<div class="row">
+					<label for="submit-language" class="col-md-1 col-form-label"
+						   style="text-align: right">{$lang.language}:</label>
+					<div class="col-md-11">
+						<select class="form-control custom-select" name="language" id="submit-language"
+								onchange="language_change()">
+							{volist name="allowed_langs" id="item"}
+							<option value="{$item.id}">{$item.name} ({$item.version})</option>
+							{/volist}
+						</select>
+					</div>
+				</div>
+				<br>
+				<div class="row">
+					<label for="submit-source" class="col-md-1 col-form-label"
+						   style="text-align: right">{$lang.source_code}:</label>
+					<div class="col-md-11">
+                <textarea class="form-control" style="font-family: Consolas,Courier,monospace;" name="submit-source"
+						  id="submit-source" rows="19"></textarea>
+					</div>
+				</div>
+				<br>
+				<div class="row">
+					<label class="col-md-1 col-form-label"></label>
+					<div class="col-md-11">
+						<button class="btn btn-success" type="button" onclick="checkLoginThenSubmitCode();" id="submit-code-btn">{$lang.submit}</button>
+						<span id="solution-result-div" hidden>
+                    <span id="solution-result"></span>
+                    <span id="solution-pending-spin" hidden>&nbsp;<i class="fa fa-refresh fa-spin"></i></span>
+                    <span id="solution-id-span">运行编号：<a href="javascript:" target="_blank" id="solution-id"></a></span>
+                </span>
+					</div>
+				</div>
+				<br>
+				<div class="row">
+					<label class="col-md-1 col-form-label"></label>
+					<div class="col-md-11">
+						<div id="compile-info-panel" hidden>
+							<pre id="solution-compile-error"></pre>
+						</div>
+						<div class="alert alert-warning" role="alert" id="ce-info" style="display: none"></div>
+					</div>
+				</div>
+			</div>
+			<!--	提交代码表单组 end-->
+		</div>
+
+
+		<div class="col-md-3">
 			<!--			近期提交历史 begin-->
 			<div class="panel panel-default">
 				<div class="panel-heading">
@@ -131,193 +187,58 @@
 				</div>
 			</div>
 			<!--			近期提交历史 end-->
-
 		</div>
 	</div>
 </div>
 
-
-<!--提交代码所用之模态框 begin-->
-<div class="modal fade" id="submitModal" tabindex="-1" role="dialog" aria-labelledby="submitModalLabel" aria-hidden="true">
-	<div class="modal-dialog modal-lg" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-					<span aria-hidden="true">×</span>
-				</button>
-				<h4 class="modal-title" id="submitModalLabel">{$lang.submit_code}</h4>
-			</div>
-			<div class="modal-body">
-				<form id="submit-form">
-					<div class="form-group">
-						<div class="row">
-							<label for="submit-language" class="col-md-2 col-form-label" style="text-align: right">{$lang.language}:</label>
-							<div class="col-md-10">
-								<select class="form-control custom-select" name="language" id="submit-language" onchange="language_change()">
-									{volist name="allowed_langs" id="item"}
-									<option value="{$item.id}">{$item.name} ({$item.version})</option>
-									{/volist}
-								</select>
-							</div>
-						</div>
-						<br>
-						<div class="row">
-							<label for="submit-source" class="col-md-2 col-form-label" style="text-align: right">{$lang.source_code}:</label>
-							<div class="col-md-10">
-								<textarea onclick="$('#submit-alert').hide();" class="form-control" style="font-family: Consolas,Courier,monospace;" name="source" id="submit-source" rows="15" placeholder="At least 50 characters"></textarea>
-							</div>
-						</div>
-					</div>
-				</form>
-			</div>
-			<div class="modal-footer">
-				<div class="alert alert-danger" role="alert" id="submit-alert" style="display: none"></div>
-				<button type="button" class="btn btn-secondary" data-dismiss="modal">{$lang.cancel}</button>
-				<button type="button" class="btn btn-primary" id="btn-submit" onclick="submit_code()">{$lang.submit}</button>
-			</div>
-		</div>
-	</div>
-</div>
-<!--提交代码所用之模态框 end-->
-
-
-<!--登录所用之模态框 begin-->
-<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal">
-					<span>×</span>
-				</button>
-				<h4 class="modal-title" id="loginModalLabel">Login</h4>
-			</div>
-			<div class="modal-body">
-				<form id="login-form">
-					<div class="form-group">
-						<label for="login-username" class="form-control-label">{$lang.username}:</label>
-						<input type="text" class="form-control" id="login-username" placeholder="{$lang.username}">
-					</div>
-					<div class="form-group">
-						<label for="login-password" class="form-control-label">{$lang.password}:</label>
-						<input type="password" class="form-control" id="login-password" placeholder="{$lang.password}">
-					</div>
-				</form>
-			</div>
-			<div class="modal-footer">
-				<div class="alert alert-danger" role="alert" id="login-alert" style="display: none;"></div>
-				<button type="button" class="btn btn-secondary" data-dismiss="modal">{$lang.cancel}</button>
-				<button type="button" class="btn btn-primary" id="btn-login" onclick="login()">{$lang.login}</button>
-			</div>
-		</div>
-	</div>
-</div>
-<!--登录所用之模态框 end-->
-
-<!--测试结果之模态框 begin-->
-<div class="modal fade" id="solutionModal" tabindex="-1" role="dialog" aria-hidden="true">
-	<div class="modal-dialog modal-lg" role="document">
-		<div class="modal-content">
-			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal">
-					<a href="javascript:void(0)">
-						<i class="fa fa-close"></i>
-					</a>
-				</button>
-				<h5 class="modal-title" id="solutionModalLabel"><a target="_blank">#<span id="solution_id"></span></a></h5>
-			</div>
-			<div class="modal-body">
-				<div id="info-panel">
-					<table class="table table-reflow">
-						<thead>
-						<tr>
-							<th width="15%">{$lang.run_id}</th>
-							<th width="25%">{$lang.status}</th>
-							<th width="20%">{$lang.code_length}</th>
-							<th width="20%">{$lang.language}</th>
-							<th width="20%">{$lang.submit_time}</th>
-						</tr>
-						</thead>
-						<tbody>
-						<tr>
-							<td><span id="solution_id_2"></span></td>
-							<td><span id="solution-result"></span><span id="solution-pending-spin">&nbsp;<i class="fa fa-refresh fa-spin"></i></span></td>
-							<td id="solution-code-length"></td>
-							<td id="solution-code-language"></td>
-							<td id="solution-submittime"></td>
-						</tr>
-						</tbody>
-					</table>
-				</div>
-				<div class="alert alert-warning" role="alert" id="ce-info" style="display: none"></div>
-			</div>
-		</div>
-	</div>
-</div>
-<!--测试结果之模态框 end-->
 
 <script type="text/javascript">
-    function show_submit_code_modal(){
-        $('#submit-source').val('');
-        // 先判断用户是否已经登录
-        $.get('/api/Login/islogin',function(d){
-            if ('success' == d.status) {
-                $('#submitModal').modal('show');
-            }else{
-                $('#loginModal').modal('show');
-            }
-        },'json');
-
-    }
-
-    function login(){
-        var loginData = {
-            'username': $('#login-username').val(),
-            'password': $('#login-password').val()
-        };
-        $.post('/api/Login/login',loginData,function(d){
-            if ('success' == d.status) {
-                $('#loginModal').modal('hide');
-                show_submit_code_modal();
-            }else{
-                $('#loginModal').modal('hide');
-                layer.alert(d.msg,{},function(index){
-                    layer.close(index);
-                    show_submit_code_modal();
-                });
-            }
-        },'json');
-    }
-
     function status_monitor(solution_id){
         $.get('/api/Solution/status?solution_id='+solution_id,function(d){
             if (d.data.result < 4) {
                 $('#solution-result').html('<span class="'+d.data.result_code+'">'+d.data.result_text+'</span>');
-                setTimeout(status_monitor(solution_id),100);
+                setTimeout(function(){
+					status_monitor(solution_id)
+				}, 300);
             }else{
+				$('#submit-code-btn').text("{$lang.submit}");
+				$('#submit-code-btn').attr('disabled', false);
 				$('#solution-result').html('<span class="'+d.data.result_code+'">'+d.data.result_text+'</span>');
                 $('#solution-pending-spin').hide();
+				/* 如果是编译错误还要显示编译错误信息 */
+				if (11 === d.data.result) {
+					$('#solution-compile-error').html(d.data.compile_info.error);
+					$('#solution-result').html(
+							'<span class="' + d.data.result_code + '"><a href="/solutions/' + solution_id + '/ceinfo" target="_blank">' + d.data.result_text + '</a></span>'
+					);
+					$('#compile-info-panel').show();
+				}
+				$('#solution-pending-spin').hide();
+
             }
         },'json');
     }
 
     function submit_code(){
-        var codeData = {
-            'contest_id': {$contest->contest_id},
-            'problem_num': {$contest_problem->num},
+		$('#submit-code-btn').text("Submitting");
+		$('#submit-code-btn').attr('disabled', true);
+    	let contest_id = "{$contest->contest_id}";
+    	let problem_num = "{$contest_problem->num}";
+        let codeData = {
+            'contest_id': contest_id,
+            'problem_num': problem_num,
             'language': $('#submit-language').val(),
             'code': $('#submit-source').val()
         };
         $.post('/api/Solution/submit_contest_problem_code',codeData,function(d){
+			$('#submit-code-btn').text("Submitted");
             if ('success' === d.status) {
-                $('#solution_id').html(d.data.solution_id);
-                $('#solution_id_2').html(d.data.solution_id);
-                $('#solution-code-length').html(d.data.code_length+' B');
-                $('#solution-code-language').html(d.data.language_text);
-                $('#solution-submittime').html(d.data.in_date);
-                $('#solution-result').html('{$lang.contest_code_pending}');
-                $('#submitModal').modal('hide');
-                $('#solutionModal').modal('show');
-                $('#solution-pending-spin').show();
+				$('#solution-id').html(d.data.solution_id);
+				$('#solution-id').attr('href', '/solutions/' + d.data.solution_id);
+				$('#solution-result').html('{$lang.contest_code_pending}');
+				$('#solution-result').css('color', 'black');
+				$('#solution-pending-spin').show();
+				$('#solution-result-div').show();
                 // 监控题目状态
                 status_monitor(d.data.solution_id);
             }else{
@@ -327,14 +248,13 @@
         },'json');
     }
 
-    // 源代码语言切换
+    /* 源代码语言切换 */
     function language_change(){
         let lang_val = document.getElementById('submit-language').value;
         localStorage.setItem("lang_val", lang_val);
     }
 
     function rejudge_problem(contest_id, pid) {
-    	// layer.alert(contest_id + ' ' + pid);
 		layer.confirm('确定重判此题目？', function(){
 			// layer.alert(contest_id + ' ' + pid);
 			$.post('/api/solution/rejudge_contest_problem', {'contest_id': contest_id, 'pid': pid}, function(d){
@@ -349,9 +269,42 @@
 		})
 	}
 
+	function gotoSubmitFormGroup() {
+		$(window).scrollTop($("#submit-group").offset().top);
+	}
+
+	function checkLogin(func) {
+		/* 先判断用户是否已经登录 */
+		$.get('/api/Login/islogin', function (d) {
+			if ('success' === d.status) {
+				func();
+			} else {
+				let loginData = {
+					'username': localStorage.getItem('username'),
+					'password': localStorage.getItem('password')
+				};
+				$.post('/api/Login/login', loginData, function (d) {
+					if ('success' === d.status) {
+						func();
+					} else {
+						location.href = '/login'
+					}
+				}, 'json');
+			}
+		}, 'json');
+	}
+
+	function checkLoginThenSubmitCode () {
+		$('#solution-result-div').hide();
+		$('#compile-info-panel').hide();
+		checkLogin(function(){
+			submit_code()
+		});
+	}
+
     $(function(){
         // 自动初始化语言
-        var lang_val = localStorage.getItem('lang_val');
+        let lang_val = localStorage.getItem('lang_val');
         if (null == lang_val) {
             lang_val = 0;
         }
